- Fixed: Potiontype error with some 3rd party plugins