@@ -84,11 +84,23 @@ map:
       # Path is relative to the "bluemap" folder in your server.
       # Example: 'assets\steve.png'
       icon_2: ''
+      # Center the icon
+      icon-anchor:
+        # If you want the icon to be centered you should set this to half of the icon width in pixels.
+        x: 25
+        # If you want the icon to be centered you should set this to half of the icon height in pixels.
+        y: 25
       # Set the icon for a nations capital.
       # NOTE: This needs to be the absolute image address. Recommended imgage size: 32 x 32 pixels
       # Path is relative to the "bluemap" folder in your server.
       # Example: 'assets\steve.png'
       icon-capital_2: ''
+      # Center the icon
+      icon-capital-anchor:
+        # If you want the icon to be centered you should set this to half of the icon width in pixels.
+        x_2: 25
+        # If you want the icon to be centered you should set this to half of the icon height in pixels.
+        y_2: 25
       # Set minimum zoom. The icon won't display, if the zoom in your browser is smaller (mousewheel).
       min-zoom_2: 5
     # Set the markers height.
